# ChangeLog for sys-apps/schedule
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*starter-5.1 (04 Sep 2014)

  04 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump

*starter-5.0 (02 Sep 2014)

  02 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Add schedule-tmux

*starter-4.2 (29 Aug 2014)

  29 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix manpage handling

*starter-4.1 (23 Aug 2014)

  23 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-4.0 (20 Aug 2014)

  20 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuilds

*starter-3.1 (15 Aug 2014)

  15 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-3.0 (14 Aug 2014)

  14 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support job address, job address ranges

*starter-2.2 (12 Aug 2014)

  12 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support nonpositive numbers in job ranges

*starter-2.1 (11 Aug 2014)

  11 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump. Support static job numbers, race-free parallel

*starter-1.1 (10 Aug 2014)

  10 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support --bg --daemon. Essential bugfixes

*starter-1.0 (09 Aug 2014)

  09 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Strengthen encryption

*starter-0.15 (08 Aug 2014)

  08 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Add recommendations for encryption

*starter-0.14 (02 Aug 2014)

  02 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.13 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.12 (27 Jul 2014)

  27 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild
