@@ -1,2 +1,1 @@
-DIST schedule-5.0.tar.gz 38609 SHA256 69b9b5bb30b7066dd45bcae291bda601f1c49d399ecdc74e2423bfc9c4610a40 SHA512 effabe2f3a3c51d662f75e24c0215faef525387544c0ebd0456fe903039f11380f34bd5e34ff4ca9c0fd634f95b047ebe091a99df537432bfe318307e565ed77 WHIRLPOOL 035fd1d9a5f784748070f5b22215f421592e29c97d8d85feb258d06d068a36842fdc5617889b5376b2e9c2a339cdb6ca083bb89c6debc25896a18a22265d5298
-DIST schedule-5.1.tar.gz 40478 SHA256 59e5e8ac514d8922244ee3bd44ad843bf0062b3b4f5672d4d52e1f3cef6fd32e SHA512 d060511f953cbbba1abd5950f7166d7cce64fdb98275780a17b01f69bb34ca583e61b7d1dc7173c5fdc4e6f2d07086b5e37ae013e23cc3df076547cf46702abe WHIRLPOOL 19f3e1427fa547ffe9ffb31510784d5dd832a45449a40c98ab10e68a93ae2412500ecd7ba5fb66a12b02041d3012ed8c7112836a66c349c13dd03e4206144c83
+DIST schedule-5.2.tar.gz 40724 SHA256 af4619aa4f0cd206acf213af067c7ad83eefe137a752a194c267d5ad31c93f2c SHA512 3bb397cb4b1edfa5476b1874e00d15c990ead9853ca2d5a4f291c543c678c7af5aba6a792f3eeaf7e3c7b4cf68b4ff3c08f43d1a2f41a5238233a81f5d7c7441 WHIRLPOOL e2b68ffb1519259de4cb604248f901f6f6d1085239c905743daba8807cccbbb389b13844a4dd13ed8ba9b787559ff454c7c671d45210ea57d729fcf527157707
