@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-5.2 (04 Sep 2014)
+
+  04 Sep 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *starter-5.1 (04 Sep 2014)
 
   04 Sep 2014; Martin Väth <martin@mvath.de>:
